Гриды на главной странице

--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ img {
 .main-header {
   display: grid;
   justify-content: stretch;
-  grid-template-columns: min-content 1fr min-content;
+  grid-template-columns: 160px 1fr min-content;
   margin-top: 50px;
 }
 
@@ -485,6 +485,11 @@ img {
 
 
 /* Catalog */
+
+.page-catalog {
+  display: grid;
+  grid-template-columns: 180px 1fr;
+}
 
 .main-page h1 {
   font-size: 55px;
